--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,28 @@
-<p>nav-bar works!</p>
+<!-- <nav>
+    <ul>
+        <li [routerLink]="['/products']" *ngIf="usersService.isLogged()">Productos</li>
+        <li [routerLink]="['/products', 'new']" *ngIf="usersService.isLogged()">Nuevo Producto</li>
+        <li [routerLink]="['/auth','register']" *ngIf="!usersService.isLogged()">Registro</li>
+        <li [routerLink]="['/auth','login']" *ngIf="!usersService.isLogged()">Login</li>
+        <li (click)="onClickLogout()" *ngIf="usersService.isLogged()">Logout</li>
+    </ul>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="../../../../assets/logo_TeacherAdmin.png" alt="" width="170" height="35">
+        </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Pricing</a>
+          <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+        </div>
+      </div>
+    </div>
+  </nav>
