--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -8,19 +8,22 @@
     </ul>
 </nav> -->
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-custom mt-5 mb-5">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="../../../../assets/logo_TeacherAdmin.png" alt="" width="170" height="35">
+            <img src="../../../../assets/logo_TeacherAdmin.svg" alt="" width="170" height="35">
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link" href="#">Chat</a>
+          <a class="nav-link" href="#">Cerrar Sesión</a>
+          <a class="nav-link" href="#">Iniciar Sesión</a>
+          <a class="nav-link" href="#">Registrar</a>
+          <a class="nav-link" href="#">UserName</a>
           <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
         </div>
       </div>
