cambiando vista teacher y estudiante

--- a/src/app/modules/users/components/form-register/form-register.component.css
+++ b/src/app/modules/users/components/form-register/form-register.component.css
@@ -11,3 +11,10 @@ input.ng-valid.ng-touched {
     color: tomato;
     font-size: 12px;
 }
+
+.form{
+    visibility: hidden;
+}
+.form.visible{
+    visibility:visible;
+}
