--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -21,8 +21,8 @@
           <a class="nav-link" aria-current="page" href="#">Inicio</a>
           <a class="nav-link" href="#">Chat</a>
           <a class="nav-link" href="#">Cerrar Sesión</a>
-          <a class="nav-link" href="#">Iniciar Sesión</a>
-          <a class="nav-link" href="#">Registrar</a>
+          <a class="nav-link" [routerLink]="['/users', 'login']">Iniciar Sesión</a>
+          <a class="nav-link" [routerLink]="['/users', 'register']">Registrar</a>
           <a class="nav-link" href="#">UserName</a>
           <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
         </div>
