--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="container">
+<div class="container d-flex flex-column min-vh-100">
   <app-nav-bar></app-nav-bar>
-  <router-outlet></router-outlet>
+  <div class="flex-grow-1">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </div>
