--- a/src/app/modules/users/components/form-login/form-login.component.html
+++ b/src/app/modules/users/components/form-login/form-login.component.html
@@ -8,5 +8,5 @@
         <input type="text" class="form-control" formControlName="password">
     </div>
     <input type="submit" value="Enviar" class="btn">
-    <!-- <p class="error">{{errorMessage}}</p> -->
+    <p class="error">{{errorMessage}}</p>
 </form>
