--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
     </ul>
 </nav> -->
 
-<nav class="navbar navbar-expand-lg navbar-custom mt-5 mb-5">
+<nav class="navbar navbar-expand-md navbar-custom mt-4 mb-4">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="../../../../assets/logo_TeacherAdmin.svg" alt="" width="170" height="35">
@@ -18,13 +18,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link" [routerLink]="['']">Inicio</a>
           <a class="nav-link" href="#">Chat</a>
           <a class="nav-link" href="#">Cerrar Sesión</a>
           <a class="nav-link" [routerLink]="['/users', 'login']">Iniciar Sesión</a>
           <a class="nav-link" [routerLink]="['/users', 'register']">Registrar</a>
           <a class="nav-link" href="#">UserName</a>
-          <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
         </div>
       </div>
     </div>
