Separando los formularios de registro. Actualmente esta funcionando solo user.

--- a/src/app/modules/users/components/form-register-location/form-register-location.component.html
+++ b/src/app/modules/users/components/form-register-location/form-register-location.component.html
@@ -1,1 +1,4 @@
-<form [formGroup]="locationForm" (ngSubmit)="onSubmit()">funcsiona</form>
+<!--<fieldset [formGroupName]="groupName">
+  Location - Actualmente esta hard code
+</fieldset>-->
+<p>Location - Actualmente esta hard code</p>
