--- a/src/app/modules/users/components/form-register/form-register.component.html
+++ b/src/app/modules/users/components/form-register/form-register.component.html
@@ -1,6 +1,6 @@
 <div class="background">
   <section class="container mt-3">
-    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="mainForm" (ngSubmit)="onSubmit()">
       <div class="my-2">
         <select name="role_id" id="role_id" formControlName="role_id">
           <option value="1">Estudiante</option>
@@ -8,112 +8,52 @@
         </select>
       </div>
 
+      <app-form-register-user groupName="userForm"></app-form-register-user>
+
+      <!--
       <div class="my-2">
-        <label for="name" class="form-label">Nombre</label>
-        <input
-          class="form-control"
-          type="text"
-          id="name"
-          placeholder="ingresa tu nombre y apellido"
-          formControlName="name"
-        />
         <p class="error" *ngIf="checkControl('name', 'required')">
           Campo es requerido
         </p>
         <p class="error" *ngIf="checkControl('name', 'minlength')">
           La longitud minima es de 3 caracteres
         </p>
-      </div>
-      <div class="my-2">
-        <label for="nickname" class="form-label">Nombre de usario</label>
-        <input
-          class="form-control"
-          type="text"
-          id="nickname"
-          placeholder="ingresa tu nombre de usario"
-          formControlName="nickname"
-        />
         <p class="error" *ngIf="checkControl('nickname', 'required')">
           Campo es requerido
         </p>
         <p class="error" *ngIf="checkControl('nickname', 'minlength')">
           La longitud minima es de 3 caracteres
         </p>
-      </div>
-      <div class="my-2">
-        <label for="email" class="form-label">Correo electrònico</label>
-        <input
-          class="form-control"
-          type="text"
-          id="email"
-          placeholder="ingresa tu email"
-          formControlName="email"
-        />
         <p class="error" *ngIf="checkControl('email', 'required')">
           Campo es requerido
         </p>
         <p class="error" *ngIf="checkControl('email', 'email')">
           Email incorrecto
         </p>
-      </div>
-      <div class="my-2">
-        <label for="phone" class="form-label">Telèfono</label>
-        <input
-          class="form-control"
-          type="text"
-          id="phone"
-          placeholder="ingresa tu numero de telèfono"
-          formControlName="phone"
-        />
         <p class="error" *ngIf="checkControl('phone', 'required')">
           Campo es requerido
         </p>
         <p class="error" *ngIf="checkControl('phone', 'minlength')">
           La longitud minima es de 3 caracteres
         </p>
-      </div>
-      <div class="my-2">
-        <label for="password" class="form-label">Contraseña</label>
-        <input
-          class="form-control"
-          type="password"
-          id="password"
-          formControlName="password"
-        />
         <p class="error" *ngIf="checkControl('password', 'required')">
           Campo es requerido
         </p>
-      </div>
-      <div class="my-2">
-        <label for="photo" class="form-label">Imàgen de perfil</label>
-        <input
-          class="form-control"
-          type="text"
-          id="photo"
-          placeholder="ingresa tu url"
-          formControlName="photo"
-        />
         <p class="error" *ngIf="checkControl('photo', 'required')">
           Campo es requerido
         </p>
-      </div>
+      </div>-->
 
-      <app-form-register-location
-        class="form"
-        [ngClass]="{ visible: this.userForm.value.role_id === '2' }"
-      ></app-form-register-location>
+      <app-form-register-location></app-form-register-location>
 
-      <app-form-register-teacher
-        class="form"
-        [ngClass]="{ visible: this.userForm.value.role_id === '2' }"
-      ></app-form-register-teacher>
+      <!--<div *ngIf="this.mainForm.value.role_id === '2'">
+        <app-form-register-teacher
+          [teacherForm]="teacherForm"
+        ></app-form-register-teacher>
+      </div>-->
 
-      <input
-        type="submit"
-        value="Enviar"
-        class="btn btn-danger mt-3"
-        [disabled]="!userForm.valid"
-      />
+      <!--[disabled]="!mainForm.valid"-->
+      <input type="submit" value="Enviar" class="btn btn-danger mt-3" />
     </form>
   </section>
 </div>
