--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* body {
+    background: linear-gradient(180deg, rgba(39,24,126,1) 0%, rgba(100,119,214,1) 100%);
+    color: whitesmoke;
+}
+
+.student {
+    background-color: blue;
+}
+
+.teacher {
+    background-color: darkgoldenrod;
+}
+
+.admin {
+    background-color: darkgrey;
+} */
