--- a/src/app/modules/home/components/home/home-components/hero-section/hero-section.component.html
+++ b/src/app/modules/home/components/home/home-components/hero-section/hero-section.component.html
@@ -1,1 +1,5 @@
-<p>hero-section works!</p>
+<h1 class="fs-4 p-3">Qué quieres aprender?</h1>
+<div class="input-group mb-3 w-50">
+    <input type="text" class="form-control" placeholder="Asignatura">
+    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+  </div>
