--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="container mb-4">
+    <hr class="border border-1 opacity-100">
+    <div class="d-flex justify-content-md-between">
+        <p>Copyright</p>
+        <p>&copy; 2023 Teacher App</p>
+        <p>Contacto</p>
+    </div>
+  </footer>
