--- a/src/app/modules/users/components/form-register-user/form-register-user.component.html
+++ b/src/app/modules/users/components/form-register-user/form-register-user.component.html
@@ -45,6 +45,17 @@
     />
   </div>
   <div class="my-2">
+    <label for="date_of_birth" class="form-label">Fecha de nacimiento</label>
+    <input
+      class="form-control"
+      type="date"
+      id="date_of_birth"
+      placeholder="ingresa tu fecha de nacimiento"
+      formControlName="date_of_birth"
+      required
+    />
+  </div>
+  <div class="my-2">
     <label for="password" class="form-label">Contraseña</label>
     <input
       class="form-control"
