--- a/src/app/modules/users/components/form-register/form-register.component.html
+++ b/src/app/modules/users/components/form-register/form-register.component.html
@@ -50,6 +50,9 @@
         <app-form-register-teacher
           groupName="teacherForm"
         ></app-form-register-teacher>
+        <app-form-register-subjects
+          groupName="subjectForm"
+        ></app-form-register-subjects>
       </div>
 
       <!--[disabled]="!mainForm.valid"-->
