Medio camino de Teacher Profile

--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -1,1 +1,13 @@
-<p>teacher-profile works!</p>
+<div class="container d-flex flex-column">
+
+    <section class="col-12 col-lg-6 mt-5">
+        <div class="card-size bg-white m-3 d-flex flex-column align-items-center">
+            <!-- Imagen del profesor -->
+            <img class="img-fluid rounded mx-auto p-3 shadow-sm" src="{{teacher?.photo}}" alt="TeacherImg">
+            <!-- Imagen de la estrella -->
+            <img class="img-fluid mt-3" src="Estrella" alt="RatingStar">
+            <h3>{{rating}}</h3>
+        </div>
+    </section>
+
+</div>
