--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex flex-column min-vh-100">
+<div class="container bg-color_basic d-flex flex-column min-vh-100">
   <app-nav-bar></app-nav-bar>
   <div class="flex-grow-1">
     <router-outlet></router-outlet>
