Obtener los department de la base de datos en el register

--- a/src/app/modules/users/components/form-register-subjects/form-register-subjects.component.html
+++ b/src/app/modules/users/components/form-register-subjects/form-register-subjects.component.html
@@ -6,8 +6,9 @@
       id="department_id"
       formControlName="department_id"
     >
-      <option value="1">Matematica</option>
-      <option value="2">Linguistica</option>
+      <option *ngFor="let department of departments" [value]="department.id">
+        {{ department.department_name }}
+      </option>
     </select>
   </div>
   <div class="my-2">
