Importando el componente mapa

--- a/src/app/modules/users/components/form-register-location/form-register-location.component.html
+++ b/src/app/modules/users/components/form-register-location/form-register-location.component.html
@@ -1,4 +1,3 @@
-<!--<fieldset [formGroupName]="groupName">
-  Location - Actualmente esta hard code
-</fieldset>-->
-<p>Location - Actualmente esta hard code</p>
+<fieldset [formGroupName]="groupName">
+  <app-mapa></app-mapa>
+</fieldset>
