--- a/src/app/modules/users/components/form-register/form-register.component.html
+++ b/src/app/modules/users/components/form-register/form-register.component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="w-50">
   <section class="container mt-3">
     <form [formGroup]="mainForm" (ngSubmit)="onSubmit()">
       <div class="my-2">
