--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="container bg-color_basic d-flex flex-column min-vh-100">
-  <app-nav-bar></app-nav-bar>
-  <div class="flex-grow-1">
-    <router-outlet></router-outlet>
+<div class="bg-color_basic min-vh-100 d-flex flex-column">
+  <div class="container d-flex flex-column flex-grow-1">
+    <app-nav-bar class="mt-4"></app-nav-bar>
+    <div>
+      <router-outlet class="flex-grow-1"></router-outlet>
+    </div>
   </div>
-  <app-footer></app-footer>
+  <app-footer class="mt-auto"></app-footer>
 </div>
