--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -10,8 +10,8 @@
 
 <nav class="navbar navbar-expand-md mt-4 mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand bg-white rounded-2" href="#">
-      <img src="../../../../assets/logo_TeacherAdmin.svg" alt="" width="170" height="35">
+    <a class="navbar-brand" href="#">
+      <img src="../../../../assets/logo_student.png" alt="teacher app logo" width="200" height="40">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
