Avances en mapa home

--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
@@ -1,1 +1,10 @@
-<p>map-section works!</p>
+<div class="row">
+    <div class="col-md-7">
+        <app-map></app-map>
+    </div>
+    <div class="col-md-5">
+        <div>
+            <h3>Profesores cerca de tí</h3>
+        </div>
+    </div>
+</div>
