--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -1,57 +1,38 @@
 <section class="container col-12 d-flex justify-content-between p-5">
-    <!-- Bloque 1 -->
-    <div class="card-size_tp col-lg-6 col-sm-4 bg-white m-3 d-flex flex-column align-items-center ">
-        <!-- Imagen del profesor -->
-        <div class="row">
-            <div class="col-12">
-                <img class="img-fluid rounded-5 mx-auto p-3" src="{{teacher?.photo}}" alt="TeacherImg">
-            </div>
-        </div>
-        <!-- Estrella y Rating -->
-        <div class="row mt-3">
-            <div class="col-6">
-                <img class="img-fluid"
-                    src="https://t3.ftcdn.net/jpg/01/09/84/42/240_F_109844239_A7MdQSDf4y1H80cfvHZuSa0zKBkZ68S7.jpg"
-                    alt="RatingStar" style="max-width: 55px">
-            </div>
-            <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                <h3 class="align-content-center mt-3 text-black">{{rating}}</h3>
-            </div>
-        </div>
-        <!-- Información -->
-        <div class="col-lg-6 col-sm-4 mb-3">
-            <div class="col-12 mt-3">
-                <h4 class="text-secondary small mt-3"> Experiencia: {{teacher.experience}} años.</h4>
-                <h4 class="text-secondary small mt-3">Ubicación: {{teacher.city}}.</h4>
-                <h4 class="text-secondary small mt-3">Asignatura: {{teacher.subject}} </h4>
-                <h4 class="text-secondary small mt-3"> Precio: {{teacher.price_hour}} €/hora </h4>
-            </div>
-        </div>
-    </div>
-    <!-- Button -->
-    <div class="col-lg-6 col-sm-4 mb-3" *ngIf="!isLoggedIn || isLoggedIn && !hasClasses">
-        <!-- Botón para usuarios no logueados -->
-        <button class="btn btn-primary mt-3" (click)="contactTeacher()">Contactar con: {{teacher.name}}</button>
-    </div>
-    <div class="col-lg-6 col-sm-4 mb-3" *ngIf="isLoggedIn && hasClasses">
-        <!-- Botones para usuarios logueados con clases con el profesor -->
-        <button class="btn btn-primary mt-3" (click)="startChat()">Chat</button>
-        <button class="btn btn-secondary mt-3" (click)="rateTeacher()">Puntuar</button>
-    </div>
+  <!-- Bloque 1 -->
+  <app-teacher-card
+    [teacher]="teacher"
+    [showButtonProfile]="false"
+  ></app-teacher-card>
+  <!-- Button -->
+  <div
+    class="col-lg-6 col-sm-4 mb-3"
+    *ngIf="!isLoggedIn || (isLoggedIn && !hasClasses)"
+  >
+    <!-- Botón para usuarios no logueados -->
+    <button class="btn btn-primary mt-3" (click)="contactTeacher()">
+      Contactar con: {{ teacher.name }}
+    </button>
+  </div>
 
-    <!-- Informacion del teacher Bloque 2-->
-    <div class="col-lg-6 card-size m-5">
-        <div class="text-white">
-            <div>
-                <h2>{{teacher.name}}</h2>
-            </div>
-            <div class="mt-3">
-                <p class="text-white">{{teacher.about_me}}</p>
-            </div>
-            <!-- Aquí debes colocar el componente del mapa -->
-        </div>
-        <div class="mt-3">
-            <app-map-section></app-map-section>
-        </div>
+  <div class="col-lg-6 col-sm-4 mb-3" *ngIf="isLoggedIn && hasClasses">
+    <!-- Botones para usuarios logueados con clases con el profesor -->
+    <button class="btn btn-primary mt-3" (click)="startChat()">Chat</button>
+    <button class="btn btn-secondary mt-3" (click)="rateTeacher()">
+      Puntuar
+    </button>
+  </div>
+
+  <!-- Informacion del teacher Bloque 2-->
+  <div class="col-lg-6 card-size m-5">
+    <div class="text-white">
+      <div class="mt-3">
+        <p class="text-white">{{ teacher.about_me }}</p>
+      </div>
+      <!-- Aquí debes colocar el componente del mapa -->
     </div>
+    <div class="mt-3">
+      <app-map-section></app-map-section>
+    </div>
+  </div>
 </section>
