--- a/src/app/modules/teachers/components/search-engine/search-engine.component.html
+++ b/src/app/modules/teachers/components/search-engine/search-engine.component.html
@@ -1,1 +1,25 @@
-<p>search-engine works!</p>
+<section class="container mt-3">
+  <div class="row g-3">
+    <article class="col-12 col-md-6 col-lg-4" *ngFor="let user of myTeachers">
+      <app-teacher-card
+        [teacher]="user"
+        [showButtonProfile]="true"
+      ></app-teacher-card>
+    </article>
+  </div>
+  <nav aria-label="...">
+    <ul class="pagination pagination-lg">
+      <li class="page-item active" aria-current="page">
+        <span class="page-link">1</span>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li
+        class="page-item"
+        [ngClass]="{ active: i + 1 === pagination.page }"
+        *ngFor="let _ of [].constructor(pagination.total_pages); let i = index"
+      >
+        <a class="page-link" href="#">{{ i + 1 }}</a>
+      </li>
+    </ul>
+  </nav>
+</section>
