--- a/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
+++ b/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
@@ -3,20 +3,17 @@
 >
   <!-- Imagen del profesor -->
   <div class="row">
-    <div class="text-black">
-      <h2>{{ teacher.name }}</h2>
-    </div>
     <div class="col-12">
       <img
         class="img-fluid rounded-5 mx-auto p-3"
-        src="{{ teacher?.photo }}"
+        src="{{ teacher?.photo }}/500?u={{ teacher.id }}"
         alt="TeacherImg"
       />
     </div>
   </div>
   <!-- Estrella y Rating -->
   <div class="row mt-3">
-    <div>
+    <div class="text-black">
       <h2>{{ teacher.name }}</h2>
     </div>
     <div class="col-6" *ngIf="teacher.rating">
