--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -1,4 +1,4 @@
-<section class="container col-12 d-flex justify-content-between p-5">
+<section class="container col-12 d-flex justify-content-between p-5 pb-0">
     <!-- Bloque 1 -->
     <div class="card-size_tp col-lg-6 col-sm-4 bg-white m-3 d-flex flex-column align-items-center ">
         <!-- Imagen del profesor -->
@@ -8,37 +8,30 @@
             </div>
         </div>
         <!-- Estrella y Rating -->
-        <div class="row mt-3">
+        <div class="row mt-lg-1">
             <div class="col-6">
                 <img class="img-fluid"
                     src="https://t3.ftcdn.net/jpg/01/09/84/42/240_F_109844239_A7MdQSDf4y1H80cfvHZuSa0zKBkZ68S7.jpg"
-                    alt="RatingStar" style="max-width: 55px">
+                    alt="RatingStar" style="max-width: 50px">
             </div>
-            <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                <h3 class="align-content-center mt-3 text-black">{{rating}}</h3>
+            <div class="col-6 d-flex align-items-center justify-content-center">
+                <h3 class="align-content-center mt-2 text-black">{{rating}}</h3>
             </div>
         </div>
         <!-- Información -->
-        <div class="col-lg-6 col-sm-4 mb-3">
-            <div class="col-12 mt-3">
-                <h4 class="text-secondary small mt-3"> Experiencia: {{teacher.experience}} años.</h4>
-                <h4 class="text-secondary small mt-3">Ubicación: {{teacher.city}}.</h4>
-                <h4 class="text-secondary small mt-3">Asignatura: {{teacher.subject}} </h4>
-                <h4 class="text-secondary small mt-3"> Precio: {{teacher.price_hour}} €/hora </h4>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="text-center">
+                        <h4 class="text-secondary small mt-3"> Experiencia: {{teacher.experience}} años.</h4>
+                        <h4 class="text-secondary small mt-3">Ubicación: {{teacher.city}}.</h4>
+                        <h4 class="text-secondary small mt-3">Asignatura: {{teacher.subject}} </h4>
+                        <h4 class="text-secondary small mt-3">Precio: {{teacher.price_hour}} €/hora </h4>
+                    </div>
+                </div>
             </div>
-        </div>
+        </div>>
     </div>
-    <!-- Button -->
-    <div class="col-lg-6 col-sm-4 mb-3" *ngIf="!isLoggedIn || isLoggedIn && !hasClasses">
-        <!-- Botón para usuarios no logueados -->
-        <button class="btn btn-primary mt-3" (click)="contactTeacher()">Contactar con: {{teacher.name}}</button>
-    </div>
-    <div class="col-lg-6 col-sm-4 mb-3" *ngIf="isLoggedIn && hasClasses">
-        <!-- Botones para usuarios logueados con clases con el profesor -->
-        <button class="btn btn-primary mt-3" (click)="startChat()">Chat</button>
-        <button class="btn btn-secondary mt-3" (click)="rateTeacher()">Puntuar</button>
-    </div>
-
     <!-- Informacion del teacher Bloque 2-->
     <div class="col-lg-6 card-size m-5">
         <div class="text-white">
@@ -55,3 +48,51 @@
         </div>
     </div>
 </section>
+<!-- Button -->
+<div class="container col-12 d-flex ms-5">
+    <div class="col-6">
+        <div class="mb-2 ms-5 card-size_tp justify-content-center align-items-center"
+            *ngIf="!isLoggedIn || isLoggedIn && !hasClasses">
+            <!-- Botón para usuarios no logueados -->
+            <button class="btn btn-warning" (click)="contactTeacher()">Contactar con: {{teacher.name}}</button>
+        </div>
+        <div class="mb-2 card-size_tp row justify-content-center align-items-center" *ngIf="isLoggedIn && hasClasses">
+            <!-- Botones para usuarios logueados con clases con el profesor -->
+            <button class=" col-3 btn btn-primary me-3" (click)="startChat()">Chat</button>
+            <button class="col-3 btn btn-warning ms-3" (click)="rateTeacher()">Puntuar</button>
+        </div>
+    </div>
+</div>
+<!-- Ratings -->
+<div>
+    <h2 class="text-center text-white mt-5 mb-4">Lo que dicen de {{teacher.name}} </h2>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-8 mx-auto">
+            <div *ngFor="let ratings of ultimos4Ratings" class="mb-3">
+                <div class="d-flex justify-content-start mb-2">
+                    <div class="card rounded-5 fondo-gris text-white p-3 col-sm-7">
+                        <div class="d-flex align-items-center">
+                            <div>
+                                <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
+                                    alt="RatingStar" style="max-width: 20px">
+                            </div>
+                            <div>
+                                <h3 class="mt-3 text-white ms-3 fs-5 ">{{ ratings.rating }}</h3>
+                            </div>
+                        </div>
+                        <p>{{ ratings.comment_student }}</p>
+                        <small>{{ ratings.creation_date | date:'dd/MM/yyyy' }}</small>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-end mb-2 ">
+                    <div class="card text-end text-white rounded-5 fondo-gris p-3 col-sm-7">
+                        <p>{{ ratings.comment_teacher }}</p>
+                        <small>{{ ratings.creation_date | date:'dd/MM/yyyy' }}</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
