--- a/src/app/modules/teachers/components/search-engine/search-engine.component.html
+++ b/src/app/modules/teachers/components/search-engine/search-engine.component.html
@@ -9,16 +9,13 @@
   </div>
   <nav aria-label="...">
     <ul class="pagination pagination-lg">
-      <li class="page-item active" aria-current="page">
-        <span class="page-link">1</span>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
       <li
+        (click)="getPage(i + 1)"
         class="page-item"
-        [ngClass]="{ active: i + 1 === pagination.page }"
-        *ngFor="let _ of [].constructor(pagination.total_pages); let i = index"
+        *ngFor="let pag of this.pagination.arrPag; let i = index"
+        [ngClass]="{ active: i + 1 === this.pagination.currentPage }"
       >
-        <a class="page-link" href="#">{{ i + 1 }}</a>
+        <span class="page-link">{{ i + 1 }}</span>
       </li>
     </ul>
   </nav>
