--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -44,7 +44,7 @@
             <!-- Aquí debes colocar el componente del mapa -->
         </div>
         <div class="mt-3">
-            <app-map-section></app-map-section>
+            <app-map></app-map>
         </div>
     </div>
 </section>
@@ -58,7 +58,7 @@
         </div>
         <div class="mb-2 card-size_tp row justify-content-center align-items-center" *ngIf="isLoggedIn && hasClasses">
             <!-- Botones para usuarios logueados con clases con el profesor -->
-            <button class=" col-3 btn btn-primary me-3" (click)="startChat()">Chat</button>
+            <button class=" col-3 btn btn-primary ms-3" (click)="startChat()">Chat</button>
             <button class="col-3 btn btn-warning ms-3" (click)="rateTeacher()">Puntuar</button>
         </div>
     </div>
@@ -93,6 +93,41 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div>
+    <h2 class="text-center text-white mt-3 mb-4">Clases Disponibles </h2>
+</div>
+<div class="container mt-3 mb-3">
+    <div class="row justify-content-center">
+        <div class="col-sm-8 bg-white rounded-4">
+            <table class="table table-striped text-black text-center">
+                <tr>
+                    <th>Día de la semana</th>
+                    <th>Hora de inicio</th>
+                    <th>Hora de fin</th>
+                    <th>Bloque</th>
+                    <th>Acción</th>
+                </tr>
+                <tr class="border-1 border-black bg-color_table mt-2" *ngFor="let slot of studentClass; let i = index">
+                    <td>{{ slot.day_of_week }}</td>
+                    <td>{{ slot.start_time }}</td>
+                    <td>{{ slot.end_time }}</td>
+                    <td>{{ slot.slot }}</td>
+                    <td>
+                        <ng-container *ngIf="enrolStudent[i]">
+                            <button class="m-1 btn btn-info btn-sm" disabled>Inscrito</button>
+                        </ng-container>
+                        <ng-container *ngIf="!enrolStudent[i] && isSlotNotFull[i]">
+                            <button class="m-1 btn btn-success btn-sm" (click)="enrollClass(slot)">Inscribirse</button>
+                        </ng-container>
+                        <ng-container *ngIf="!enrolStudent[i] && !isSlotNotFull[i]">
+                            <button class="m-1 btn btn-danger btn-sm" disabled>Completo</button>
+                        </ng-container>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
