--- a/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
+++ b/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
@@ -1,14 +1,8 @@
-<div
-  class="card-size_tp col-lg-6 col-sm-4 bg-white m-3 d-flex flex-column align-items-center"
->
+<div class="card-size_tp col-lg-6 col-sm-4 bg-white m-3 d-flex flex-column align-items-center">
   <!-- Imagen del profesor -->
   <div class="row">
     <div class="col-12">
-      <img
-        class="img-fluid rounded-5 mx-auto p-3"
-        src="{{ teacher?.photo }}/500?u={{ teacher.id }}"
-        alt="TeacherImg"
-      />
+      <img class="img-fluid rounded-5 mx-auto p-3" src="{{ teacher?.photo }}" alt="TeacherImg" />
     </div>
   </div>
   <!-- Estrella y Rating -->
@@ -17,12 +11,9 @@
       <h2>{{ teacher.name }}</h2>
     </div>
     <div class="col-6" *ngIf="teacher.rating">
-      <img
-        class="img-fluid"
-        src="https://t3.ftcdn.net/jpg/01/09/84/42/240_F_109844239_A7MdQSDf4y1H80cfvHZuSa0zKBkZ68S7.jpg"
-        alt="RatingStar"
-        style="max-width: 55px"
-      />
+      <img class="img-fluid"
+        src="https://t3.ftcdn.net/jpg/01/09/84/42/240_F_109844239_A7MdQSDf4y1H80cfvHZuSa0zKBkZ68S7.jpg" alt="RatingStar"
+        style="max-width: 55px" />
       <h3 class="text-black">{{ teacher.rating }}</h3>
     </div>
   </div>
