--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.css
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.css
@@ -15,3 +15,13 @@
 .bg-color_table {
     background-color: rgba(255, 175, 86, 0.3);
 }
+
+.custom-h3 {
+    margin-bottom: 0 !important;
+    /* Asegura que este estilo tenga prioridad */
+}
+
+.btn-personalizado {
+    width: 280px;
+    height: 60px;
+}
