--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -8,15 +8,18 @@
             </div>
         </div>
         <!-- Estrella y Rating -->
-        <div class="row mt-lg-1">
-            <div class="col-6">
+        <div class="container d-flex justify-content-center align-items-center">
+            <div class="col-sm-3">
                 <img class="img-fluid"
                     src="https://t3.ftcdn.net/jpg/01/09/84/42/240_F_109844239_A7MdQSDf4y1H80cfvHZuSa0zKBkZ68S7.jpg"
                     alt="RatingStar" style="max-width: 50px">
             </div>
-            <div class="col-6 d-flex align-items-center justify-content-center">
-                <h3 class="align-content-center mt-2 text-black">{{rating}}</h3>
+            <div class="col-sm-3 d-flex align-items-center justify-content-center">
+                <h3 *ngIf="ratingBool" class="align-content-center text-black custom-h3">{{ rating }}</h3>
+                <p *ngIf="!ratingBool" class="align-content-center text-black custom-h3 font-weight-bold">Aún no hay
+                    valoraciones</p>
             </div>
+
         </div>
         <!-- Información -->
         <div class="container">
@@ -51,10 +54,11 @@
 <!-- Button -->
 <div class="container col-12 d-flex ms-5">
     <div class="col-6">
-        <div class="mb-2 ms-5 card-size_tp justify-content-center align-items-center"
+        <div class="mb-2 ms-4 card-size_tp justify-content-center align-items-center"
             *ngIf="!isLoggedIn || isLoggedIn && !hasClasses">
             <!-- Botón para usuarios no logueados -->
-            <button class="btn btn-warning" (click)="contactTeacher()">Contactar con: {{teacher.name}}</button>
+            <button class="btn btn-warning btn-personalizado" (click)="contactTeacher()">Contactar con:
+                {{teacher.name}}</button>
         </div>
         <div class="mb-2 card-size_tp row justify-content-center align-items-center" *ngIf="isLoggedIn && hasClasses">
             <!-- Botones para usuarios logueados con clases con el profesor -->
@@ -64,42 +68,88 @@
     </div>
 </div>
 <!-- Ratings -->
-<div>
-    <h2 class="text-center text-white mt-5 mb-4">Lo que dicen de {{teacher.name}} </h2>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col-8 mx-auto">
-            <div *ngFor="let ratings of ultimos4Ratings" class="mb-3">
-                <div class="d-flex justify-content-start mb-2">
-                    <div class="card rounded-5 fondo-gris text-white p-3 col-sm-7">
-                        <div class="d-flex align-items-center">
-                            <div>
-                                <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
-                                    alt="RatingStar" style="max-width: 20px">
+<div *ngIf="ratingBool">
+    <h2 class="text-center text-white mt-5 mb-4">Lo que dicen de {{ teacher.name }} </h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-8 mx-auto">
+                <div *ngFor="let ratings of ultimos4Ratings" class="mb-3">
+                    <div class="d-flex justify-content-start mb-2">
+                        <div class="card rounded-5 fondo-gris text-white p-3 col-sm-7">
+                            <div class="d-flex align-items-center">
+                                <div>
+                                    <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
+                                        alt="RatingStar" style="max-width: 20px">
+                                </div>
+                                <div>
+                                    <h3 class="mt-3 text-white ms-3 fs-5 ">{{ ratings.rating }}</h3>
+                                </div>
                             </div>
-                            <div>
-                                <h3 class="mt-3 text-white ms-3 fs-5 ">{{ ratings.rating }}</h3>
-                            </div>
+                            <p>{{ ratings.comment_student }}</p>
+                            <small>{{ ratings.creation_date | date:'dd/MM/yyyy' }}</small>
                         </div>
-                        <p>{{ ratings.comment_student }}</p>
-                        <small>{{ ratings.creation_date | date:'dd/MM/yyyy' }}</small>
                     </div>
-                </div>
-                <div class="d-flex justify-content-end mb-2 ">
-                    <div class="card text-end text-white rounded-5 fondo-gris p-3 col-sm-7">
-                        <p>{{ ratings.comment_teacher }}</p>
-                        <small>{{ ratings.creation_date | date:'dd/MM/yyyy' }}</small>
+                    <div class="d-flex justify-content-end mb-2 ">
+                        <div class="card text-end text-white rounded-5 fondo-gris p-3 col-sm-7">
+                            <p>{{ ratings.comment_teacher }}</p>
+                            <small>{{ ratings.creation_date | date:'dd/MM/yyyy' }}</small>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div *ngIf="!ratingBool">
+    <h2 class="text-center text-white mt-5 mb-5">Aún no hay valoraciones para {{ teacher.name }}</h2>
+</div>
+
 <div>
     <h2 class="text-center text-white mt-3 mb-4">Clases Disponibles </h2>
 </div>
+
 <div class="container mt-3 mb-3">
+    <div class="row justify-content-center">
+        <div class="col-sm-8 bg-white rounded-4">
+            <table class="table table-striped text-black text-center">
+                <tr>
+                    <th>Día de la semana</th>
+                    <th>Hora de inicio</th>
+                    <th>Hora de fin</th>
+                    <th>Bloque</th>
+                    <th>Acción</th>
+                </tr>
+                <tr class="border-1 border-black bg-color_table mt-2" *ngFor="let slot of studentClass; let i = index">
+                    <td>{{ slot.day_of_week }}</td>
+                    <td>{{ slot.start_time }}</td>
+                    <td>{{ slot.end_time }}</td>
+                    <td>{{ slot.slot }}</td>
+                    <td>
+                        <ng-container *ngIf="enrolStudent[i]">
+                            <button class="m-1 btn btn-info btn-sm" [ngClass]="{'btn-warning': hoverable[i]}"
+                                (mouseenter)="toggleHover(i)" (mouseleave)="toggleHover(i)"
+                                (click)="unenrollClass(slot)">
+                                <ng-container *ngIf="!hoverable[i]">Inscrito</ng-container>
+                                <ng-container *ngIf="hoverable[i]">Dar de baja</ng-container>
+                            </button>
+                        </ng-container>
+                        <ng-container *ngIf="!enrolStudent[i] && isSlotNotFull[i]">
+                            <button class="m-1 btn btn-success btn-sm" (click)="enrollClass(slot)">Inscribirse</button>
+                        </ng-container>
+                        <ng-container *ngIf="!enrolStudent[i] && !isSlotNotFull[i]">
+                            <button class="m-1 btn btn-danger btn-sm" disabled>Completo</button>
+                        </ng-container>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- <div class="container mt-3 mb-3">
     <div class="row justify-content-center">
         <div class="col-sm-8 bg-white rounded-4">
             <table class="table table-striped text-black text-center">
@@ -130,4 +180,4 @@
             </table>
         </div>
     </div>
-</div>
+</div> -->
