Pofile con boton unsubscribe
Listo solo a falta de mapa

--- a/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
+++ b/src/app/modules/teacher/components/teacher-card/teacher-card.component.html
@@ -2,7 +2,7 @@
   <!-- Imagen del profesor -->
   <div class="row">
     <div class="col-12">
-      <img class="img-fluid rounded-5 mx-auto p-3" src="{{ teacher?.photo }}" alt="TeacherImg" />
+      <img class="img-fluid rounded-5 mx-auto p-3" src="{{ teacher.photo }}" alt="TeacherImg" />
     </div>
   </div>
   <!-- Estrella y Rating -->
