más homescreen y mapa teacher profile

--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.css
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.css
@@ -1,4 +1,9 @@
-.map-container {
-    display: flex;
-    flex-direction: row;
-}
+.custom-row {
+    min-height: 30rem;
+  }
+
+  #teachers-nearby .scrollable-container {
+    /* Set a maximum height for the scrollable area */
+    max-height: 27.4rem; 
+    overflow-y: scroll;
+  }
