--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
@@ -1,34 +1,61 @@
-<div class="row">
-    <div class="col-md-7">
-        <google-map *ngIf="teachers && teachers.length" height="30rem" width="auto" [center]="center" [zoom]="zoom">
-            <map-marker
-            #miMarker="mapMarker"
-            [position]="myposition"
-            [options]="markerOptionsUser"
-            (mapClick)="openInfoWindow(miMarker)"
+<div class="row custom-row" *ngIf="myposition">
+
+    <section class="col-md-7" id="teachers-map">
+      <google-map *ngIf="teachers && teachers.length" height="30rem" width="auto" [center]="center" [zoom]="zoom">
+        <map-marker
+          #miMarker="mapMarker" d
+          [position]="myposition"
+          [options]="markerOptionsUser"
+          (mapClick)="openInfoWindow(miMarker)"
           >
+          <map-info-window>
+            <h2>{{ myposition }}</h2>
+          </map-info-window>
+        </map-marker>
+        <ng-container *ngFor="let teacher of teachers">
+          <map-marker
+            [position]="{ lat: teacher.latitude, lng: teacher.longitude }"
+            [options]="markerOptionsTeachers"
+            (mapClick)="openInfoWindow(miMarker)"
+            >
             <map-info-window>
-              <h2>{{ myposition }}</h2>
+              <h2>{{ teacher.name }}</h2>
             </map-info-window>
           </map-marker>
-            <!-- Display markers for all teachers -->
-            <ng-container *ngFor="let teacher of teachers">
-              <map-marker
-                [position]="{ lat: teacher.latitude, lng: teacher.longitude }"
-                [options]="markerOptionsTeachers"
-                (mapClick)="openInfoWindow(miMarker)"
-              >
-                <map-info-window>
-                  <h2>{{ teacher.name }}</h2>
-                </map-info-window>
-              </map-marker>
-            </ng-container>
-          </google-map>
-        
-    </div>
-    <div class="col-md-5">
-        <div>
-            <h3>Profesores cerca de tí</h3>
+        </ng-container>
+      </google-map>
+    </section>
+    
+    <section class="col-md-5" id="teachers-nearby">
+      <h3>Profesores cerca de tí</h3>
+        <div class="overflow-auto scrollable-container">
+          <div *ngFor="let teacher of teachers">
+            <div class="row">
+              <div class="col-md-2">
+                <img src="{{teacher.photo}}" alt="..." class="img-fluid rounded">
+              </div>
+              <div class="col-md-10 row">
+                <p class="col-md-4">{{teacher.name}}</p>
+                <p class="col-md-5">{{teacher.subject}}</p>
+                <p class="col-md-3">{{teacher.price_hour}}€/h</p>
+              </div>
+            </div>
+            <hr class="border border-1 opacity-75">
+          </div>
         </div>
-    </div>
+    </section>
 </div>
+
+<div class="row custom-row" *ngIf="!myposition">
+  <div class="col-md-12 d-flex justify-content-center align-items-center">
+    <div class="spinner-border text-light" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+</div>
+
+<!-- TODO -->
+<!-- Un spinner para teacher y admin view -->
+<!-- <div class="spinner-border text-dark" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div> -->
