--- a/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
+++ b/src/app/modules/teacher/components/teacher-profile/teacher-profile.component.html
@@ -47,7 +47,17 @@
             <!-- Aquí debes colocar el componente del mapa -->
         </div>
         <div class="mt-3">
-            <app-map></app-map>
+            <google-map *ngIf="teacher" height="30rem" width="auto" [center]="center" [zoom]="zoom">
+                <map-marker
+                #miMarker="mapMarker"
+                [position]="myposition"
+                [options]="markerOptions"
+                >
+                    <map-info-window>
+                        <h2>{{ myposition }}</h2>
+                    </map-info-window>
+                </map-marker>
+            </google-map>
         </div>
     </div>
 </section>
